// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`get one data point 1`] = `"Async payload"`;

exports[`get one data point 2`] = `"in time"`;

exports[`get all 1`] = `
{
  "bar": 123,
  "foo": "bar",
}
`;

exports[`get all 2`] = `
{
  "bar": 123,
  "foo": "😎",
}
`;

exports[`get all 3`] = `
{
  "bar": 123,
  "foo": "☂️",
}
`;

exports[`get all 4`] = `
{
  "bar": 123,
  "foo": "🌊",
}
`;

exports[`get all 5`] = `
{
  "bar": 123,
  "foo": "🏄‍♂️",
}
`;

exports[`get all 6`] = `
{
  "bar": 123,
  "foo": "Async payload",
}
`;
